# scrapy-selenium

./: pyproject.toml  setup.py
scrapy_selenium/: http.py  middlewares.py
tests/: test_cases.py  test_middlewares.py
